--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,8 @@ img {
 }
 
 #select-fighter {
-    background-color: #3e7c87;
+    background-color: #cecece;
+    border: 1px solid black;
     padding:5px;
     margin:5px;
 }
@@ -154,4 +155,14 @@ img {
 }
 
 
-/**/
+#animate{
+    margin: 0 auto;
+    width: 100%;
+    height:100px;
+    overflow: visible;
+    position: relative;
+}
+
+.hero-photo{
+    width:180px;
+}
